--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,50 @@
+*.py[cod]
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+local_settings.py
+
+# Environment
+ENV
+apache2
+bin
+lib
+
+# Data
+*.sqlite
+*.sqlite3
+*.db
+
 original_pictures
 Website/build/images/
+ENV
+rsvps/fixtures/
