--- a/Website/bower.json
+++ b/Website/bower.json
@@ -1,6 +1,8 @@
 {
   "name": "g-and-m",
   "dependencies": {
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "mustache": "~0.8.2",
+    "lightbox": "~2.7.1"
   }
 }
